# Proyectofinalprogra

./: .gitignore  CMakeLists.txt  README.md  apptainer.def  dockerfile  tensorflow_cpp.def
examples/: CMakeLists.txt  anomaly_detection.cpp  basic_operations.cpp  linear_regression.cpp  linear_regression2.cpp  neural_network.cpp  polynomial_regression.cpp  time_series_prediction.cpp  xor_classifier.cpp
